# YegEdge

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  SETUP.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: backtest-validator.md  code-reviewer.md  sebi-compliance-auditor.md
.claude/commands/: morning-brief.md  paper-status.md  risk-audit.md  sebi-check.md
agent/: __main__.py  cli.py
agent/ai/: analyst.py  cache.py  prompt.py
agent/backtest/: costs.py  metrics.py  runner.py
agent/data/: alpaca_adapter.py  bar_builder.py  broker_adapter.py  cache.py  calendar.py  finnhub_adapter.py  types.py  universe.py  upstox_adapter.py  validator.py  yfinance_adapter.py
agent/decision/: engine.py  types.py
agent/execution/: paper.py  types.py
agent/features/: indicators.py  pipeline.py  regime.py
agent/journal/: store.py  types.py
agent/monitoring/: alerter.py  heartbeat.py  kill_switch.py
agent/portfolio/: tracker.py
agent/risk/: manager.py  rules.py  types.py
agent/runner/: __main__.py  daily_loop.py  live_session.py  session_counter.py  types.py
agent/strategies/: base.py  orb.py  trend_following.py  trend_following_5m.py  types.py
config/: nse_holidays.yaml  risk_rules.yaml  settings.py  strategies.yaml  universe.yaml  universe_nyse.yaml
dashboard/: app.py  data.py
dashboard/pages/: 01_Journal.py  02_Performance.py  03_Risk.py  04_System.py
docs/: architecture.md  build_handoff.md  live_readiness.md  sebi_compliance.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ControlsPanel.tsx  EventFeedPanel.tsx  Header.tsx  MarketDataPanel.tsx  PortfolioPanel.tsx
frontend/hooks/: useEventStream.ts
frontend/lib/: types.ts
scripts/: upstox_login.py
server/: events.py  main.py  session_manager.py
tests/: conftest.py
tests/ai/: test_analyst.py  test_cache.py  test_prompt.py
tests/backtest/: test_cli_backtest.py  test_costs.py  test_metrics.py  test_runner.py
tests/dashboard/: test_data.py
tests/data/: test_bar_builder.py  test_cache.py  test_calendar.py  test_cli.py  test_types.py  test_universe.py  test_upstox_adapter.py  test_validator.py
tests/decision/: test_engine.py  test_types.py
tests/execution/: test_paper.py  test_types.py
tests/features/: conftest.py  test_indicators.py  test_pipeline.py  test_regime.py
tests/journal/: test_store.py
tests/monitoring/: test_alerter.py  test_heartbeat.py  test_kill_switch.py
tests/portfolio/: test_tracker.py
tests/risk/: test_manager.py  test_types.py
tests/runner/: test_cli_live_paper.py  test_cli_run_paper.py  test_daily_loop.py  test_live_session.py  test_session_counter.py
tests/server/: test_events.py  test_routes.py  test_session_manager.py
tests/strategies/: test_trend_following.py  test_types.py
(+11 files in other folders)
